// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de la funcionalidad GifGrid Debe mostrar el componente 1`] = `
<Fragment>
  <h3>
    Samurai Jack
  </h3>
  <p>
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas de la funcionalidad GifGrid Debe mostrar items cuando se cargan imágenes con useFetchGifs 1`] = `
<Fragment>
  <h3>
    Samurai Jack
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier Imagen"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="DEF"
      key="DEF"
      title="Cualquier Imagen"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
